--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+        <link
+        rel="stylesheet"
+        href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.1/dist/semantic.min.css"
+      />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -8,6 +12,7 @@
 </head>
 <body>
     <div id="app"></div>
-    <script src="dist/js/ceez-asistencia.js"></script>
+    <!-- <script src="dist/js/ceez-asistencia.js"></script> -->
+    <script src="http://localhost:9000/js/ceez-asistencia.js"></script>
 </body>
 </html>
