reorganizando la estructura de archivos con react

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <body>
     <div id="app"></div>
     <!-- <script src="dist/js/ceez-asistencia.js"></script> -->
-    <script src="http://localhost:9000/js/ceez-asistencia.js"></script>
+    <script src="http://localhost:9000/js/home.js"></script>
 </body>
 </html>
